--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -2,11 +2,7 @@
 <html lang="en">
   <head>
     <%-include('./_layouts/meta.ejs') %>
-    <link rel="stylesheet" href="/static/styles/style.css" />
+    <link rel="stylesheet" href="/static/styles/style.scss" />
   </head>
-  <body>
-    홈
-    <img src="/static/images/star.png" alt="star" width="100" height="100" />
-    <script src="/static/scripts/hello.js"></script>
-  </body>
+  <body></body>
 </html>
