--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <%-include('./_layouts/meta.ejs') %>
+    <link rel="stylesheet" href="/static/styles/style.scss" />
   </head>
   <body>
     유저 화면 로그인 페이지
