--- a/src/views/users.ejs
+++ b/src/views/users.ejs
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <%-include('./_layouts/meta.ejs') %>
+    <link rel="stylesheet" href="/static/styles/style.scss" />
   </head>
   <body>
     <h1>유저 목록 페이지</h1>
