--- a/src/views/client/category/categoryList.ejs
+++ b/src/views/client/category/categoryList.ejs
@@ -3,6 +3,10 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link
+            rel="stylesheet"
+            href="../../../../public/styles/pages/category/categoryList.scss"
+        />
         <title>카테고리 목록</title>
     </head>
     <body>
