--- a/public/styles/pages/category/categoryList.css
+++ b/public/styles/pages/category/categoryList.css
@@ -1,27 +1,10 @@
-@import "_reset";
-
-body {
-    background-color: #6ee5a3;
-}
-
-.menu-bar {
-    background-color: rgba(255, 255, 255, 0.8);
-    padding: 15px;
-    width: 280px;
-    height: 100%;
-}
-
-.icons {
+/* 
+.category-icons {
     display: flex;
     justify-content: space-between;
 }
 
-.fa-user {
-    font-size: 35px;
-    padding: 15px;
-    background-color: #a5a4a4;
-    border-radius: 50%;
-}
+
 .fa-gear {
     color: black;
     font-size: 20px;
@@ -29,41 +12,149 @@ body {
     border-radius: 50%;
 }
 
-h1 {
-    font-size: 18px;
+.category-nickName {
+    padding-left: 10px;
+    font-size: 16px;
 }
 
-h2 {
-    font-size: 15px;
-    padding-bottom: 15px;
+.category-id {
+    font-size: 13px;
+    padding: 0 0 15px 10px;
     position: relative;
 }
 
-h2:after {
+.category-id:after {
     content: "";
     position: absolute;
     left: 0px;
     bottom: -2px;
-    height: 2px;
+    height: 1px;
     width: 280px;
     background: #a5a4a4;
 }
 
 .logout {
     display: flex;
+    flex-direction: row;
     justify-content: start;
-    align-items: end;
-    font-size: 20px;
-    font-weight: bold;
-    position: relative;
+    align-items: center;
+    font-size: 18px;
+    font-weight: 700;
     padding-top: 15px;
+    position: relative;
+}
+
+.logout:before {
+    content: "";
+    position: absolute;
+    left: 0px;
+    bottom: 30px;
+    height: 1px;
+    width: 280px;
+    background: #a5a4a4;
 }
 
 .fa-right-from-bracket {
-    position: absolute;
-    left: 80px;
-    bottom: -6px;
     color: black;
-    font-size: 20px;
+    font-size: 18px;
+    padding-left: 10px;
+}
+
+.category-list {
+    padding: 15px 0;
+    color: black;
+} */
+
+body {
+    background-color: #6ee5a3;
+}
+
+.category-menu-bar {
+    background-color: rgba(255, 255, 255, 0.8);
+    padding: 15px;
+    width: 280px;
+    height: 100%;
+    position: relative;
+}
+
+.fa-gear {
+    position: absolute;
+    right: 0px;
+    top: 10px;
+    color: black;
+    font-size: 16px;
+    padding: 15px;
+    border-radius: 50%;
+}
+
+.category-profile {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: start;
+    padding-bottom: 15px;
+}
+
+.fa-user {
+    font-size: 35px;
     padding: 10px;
+    background-color: #d9d9d9;
+    border-radius: 50%;
+}
+
+.category-nickName {
+    padding: 10px 0 0;
+    font-size: 16px;
+}
+
+.category-id {
+    font-size: 13px;
+    padding: 0 0 15px 0;
+    position: relative;
+}
+
+.category-id:after {
+    content: "";
+    position: absolute;
+    left: 0px;
+    bottom: -2px;
+    height: 1px;
+    width: 250px;
+    background: #a5a4a4;
+}
+
+.category-list {
+    font-weight: bold;
+    padding: 10px;
+    color: black;
+}
+
+.logout {
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    font-size: 18px;
+    font-weight: 700;
+    padding-top: 15px;
+    position: relative;
+}
+
+.logout a {
+    display: flex;
+    align-items: center;
+}
+
+.logout:before {
+    content: "";
+    position: absolute;
+    left: 0px;
+    bottom: 30px;
+    height: 1px;
+    width: 250px;
+    background: #a5a4a4;
+}
+
+.fa-right-from-bracket {
+    color: black;
+    padding-left: 5px;
 }
