--- a/src/views/admin/category/categoryList.ejs
+++ b/src/views/admin/category/categoryList.ejs
@@ -11,33 +11,36 @@
             rel="stylesheet"
             href="/static/styles/pages/category/categoryList.css"
         />
+        <link rel="stylesheet" href="/static/styles/reset.css" />
         <title>Document</title>
     </head>
     <body>
-        <div class="menu-bar">
+        <div class="category-menu-bar">
             <section>
-                <div class="icons">
+                <a href="">
+                    <i class="fa-solid fa-gear"></i>
+                </a>
+                <div class="category-profile">
                     <i class="fa-solid fa-user"></i>
-                    <a href="">
-                        <i class="fa-solid fa-gear"></i>
-                    </a>
+                    <p class="category-nickName">닉네임</p>
+                    <p class="category-id">@ggaong</p>
                 </div>
-                <h1>닉네임</h1>
-                <h2>@아이디</h2>
             </section>
             <section>
                 <% category.forEach(function(category) { %>
-                <div>
+                <div class="category-list">
                     <a href="/client/category/<%= category.categoryId %>">
                         <p><%= category.title %></p>
                     </a>
                 </div>
                 <% }) %>
             </section>
-            <p class="logout">
-                로그아웃
-                <i class="fa-solid fa-right-from-bracket"></i>
-            </p>
+            <div class="logout">
+                <a href="">
+                    <p>로그아웃</p>
+                    <i class="fa-solid fa-right-from-bracket"></i>
+                </a>
+            </div>
         </div>
     </body>
 </html>
