[카테고리] 카테고리 목록 마크업 진행중

--- a/src/views/admin/category/categoryList.ejs
+++ b/src/views/admin/category/categoryList.ejs
@@ -17,6 +17,7 @@
     <body>
         <div class="category-menu-bar">
             <section>
+                <a href=""><i class="fa-solid fa-x"></i></a>
                 <a href="">
                     <i class="fa-solid fa-gear"></i>
                 </a>
@@ -42,5 +43,17 @@
                 </a>
             </div>
         </div>
+
+        <!-- 로그아웃 창 -->
+        <div id="logout-popup" class="logout-popup hidden">
+            <div class="popup-content">
+                <p>로그아웃 하시겠습니까?</p>
+                <div class="logout-btn">
+                    <a href=""><button class="btn-cancel">취소</button></a>
+                    <a href=""> <button class="btn-confirm">확인</button></a>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
+<!-- class="logout-popup hidden" -->
