--- a/public/styles/pages/category/categoryList.css
+++ b/public/styles/pages/category/categoryList.css
@@ -1,86 +1,42 @@
-/* 
-.category-icons {
-    display: flex;
-    justify-content: space-between;
-}
-
-
-.fa-gear {
-    color: black;
-    font-size: 20px;
-    padding: 15px;
-    border-radius: 50%;
-}
-
-.category-nickName {
-    padding-left: 10px;
-    font-size: 16px;
-}
-
-.category-id {
-    font-size: 13px;
-    padding: 0 0 15px 10px;
-    position: relative;
-}
-
-.category-id:after {
-    content: "";
-    position: absolute;
-    left: 0px;
-    bottom: -2px;
-    height: 1px;
-    width: 280px;
-    background: #a5a4a4;
-}
-
-.logout {
-    display: flex;
-    flex-direction: row;
-    justify-content: start;
-    align-items: center;
-    font-size: 18px;
-    font-weight: 700;
-    padding-top: 15px;
-    position: relative;
-}
-
-.logout:before {
-    content: "";
-    position: absolute;
-    left: 0px;
-    bottom: 30px;
-    height: 1px;
-    width: 280px;
-    background: #a5a4a4;
-}
-
-.fa-right-from-bracket {
-    color: black;
-    font-size: 18px;
-    padding-left: 10px;
-}
-
-.category-list {
-    padding: 15px 0;
-    color: black;
-} */
-
 body {
     background-color: #6ee5a3;
+    /* width: 100%;
+    height: 100%; */
 }
 
+/* 메뉴 팝업 */
 .category-menu-bar {
     background-color: rgba(255, 255, 255, 0.8);
     padding: 15px;
     width: 280px;
-    height: 100%;
+    height: 100vh; /* 화면 높이의 80% */
+    outline: #ff8d8d;
     position: relative;
+    overflow-y: auto;
+}
+
+.category-menu-bar::-webkit-scrollbar {
+    width: 10px;
+}
+
+.category-menu-bar::-webkit-scrollbar-thumb {
+    background: rgba(255, 255, 255, 0.3);
+    border-radius: 10px;
+}
+
+.category-menu-bar::-webkit-scrollbar-thumb:hover {
+    background: rgba(255, 255, 255, 0.6);
+}
+
+.fa-x {
+    padding-bottom: 15px;
+    font-size: 16px;
 }
 
 .fa-gear {
     position: absolute;
     right: 0px;
-    top: 10px;
+    top: 5px;
     color: black;
     font-size: 16px;
     padding: 15px;
@@ -104,12 +60,14 @@ body {
 
 .category-nickName {
     padding: 10px 0 0;
-    font-size: 16px;
+    font-size: 15px;
+    font-weight: bold;
 }
 
 .category-id {
-    font-size: 13px;
+    font-size: 12px;
     padding: 0 0 15px 0;
+    font-weight: bold;
     position: relative;
 }
 
@@ -125,18 +83,19 @@ body {
 
 .category-list {
     font-weight: bold;
-    padding: 10px;
+    padding: 10px 0;
     color: black;
+    flex: 1;
 }
 
 .logout {
+    position: relative;
     display: flex;
-    justify-content: start;
-    align-items: center;
+    justify-content: end;
+    align-items: end;
+    padding: 15px;
     font-size: 18px;
     font-weight: 700;
-    padding-top: 15px;
-    position: relative;
 }
 
 .logout a {
@@ -144,17 +103,49 @@ body {
     align-items: center;
 }
 
-.logout:before {
-    content: "";
-    position: absolute;
-    left: 0px;
-    bottom: 30px;
-    height: 1px;
-    width: 250px;
-    background: #a5a4a4;
-}
-
 .fa-right-from-bracket {
     color: black;
     padding-left: 5px;
+}
+
+/* 로그아웃 창 */
+.logout-popup {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #ffffff;
+    width: 250px;
+    height: 100px;
+    border-radius: 10px;
+}
+
+.popup-content p {
+    padding-bottom: 15px;
+}
+
+.logout-btn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+}
+
+.btn-cancel {
+    background-color: #ff8d8d;
+    border: none;
+    padding: 5px 10px;
+    border-radius: 10px;
+    cursor: pointer;
+}
+
+.btn-confirm {
+    background-color: #9ccaff;
+    border: none;
+    border-radius: 10px;
+    padding: 5px 10px;
+    cursor: pointer;
 }
