--- a/src/views/admin/category/categoryWrite.ejs
+++ b/src/views/admin/category/categoryWrite.ejs
@@ -15,10 +15,28 @@
         <title>Document</title>
     </head>
     <body>
-        <div>
-            <p>카테고리 생성</p>
-            <input type="text" placeholder="카테고리명을 입력하세요" />
-            <button>작성</button>
+        <div class="category-write-edit-wrapper">
+            <section class="category-setup-menu-bar">
+                <a href="">
+                    <i class="fa-solid fa-gear"></i>
+                </a>
+                <div class="category-profile">
+                    <i class="fa-solid fa-user"></i>
+                    <p class="category-nickName">닉네임</p>
+                    <p class="category-id">@ggaong</p>
+                </div>
+                <div class="menu-contents">
+                    <a href=""><p>카테고리 생성</p></a>
+                    <a href=""><p>카테고리 수정</p></a>
+                </div>
+            </section>
+            <section>
+                <div class="create-category">
+                    <p>카테고리 생성</p>
+                    <input type="text" placeholder="카테고리명을 입력하세요." />
+                    <button>작성</button>
+                </div>
+            </section>
         </div>
     </body>
 </html>
