--- a/src/views/admin/posts/postDetail.ejs
+++ b/src/views/admin/posts/postDetail.ejs
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>게시글 상세</title>
 </head>
 <body>
   관리자 페이지 게시글 상세 보기
