--- a/public/styles/pages/category/categoryWrite.css
+++ b/public/styles/pages/category/categoryWrite.css
@@ -4,6 +4,7 @@ body {
 
 .category-write-edit-wrapper {
     display: flex;
+    gap: 100px;
 }
 
 .category-setup-menu-bar {
@@ -30,6 +31,7 @@ body {
     justify-content: center;
     align-items: start;
     padding-bottom: 15px;
+    position: relative;
 }
 
 .fa-user {
@@ -49,7 +51,6 @@ body {
     font-size: 12px;
     padding: 0 0 15px 0;
     font-weight: bold;
-    position: relative;
 }
 
 .category-id:after {
@@ -58,8 +59,16 @@ body {
     left: 0px;
     bottom: -2px;
     height: 1px;
-    width: 250px;
+    width: 100%;
     background: #a5a4a4;
+}
+
+.category-setup-menu-bar-main {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding-top: 10px;
+    height: 83%;
 }
 
 .menu-contents p {
@@ -67,6 +76,23 @@ body {
     font-weight: bold;
 }
 
+.logout {
+    display: flex;
+    justify-content: end;
+    align-items: end;
+    font-size: 18px;
+    font-weight: 700;
+}
+
+.logout a {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.category-write-edit-main {
+    background-color: rgba(255, 255, 255, 0.8);
+}
 .create-category {
     display: flex;
     justify-content: center;
@@ -82,4 +108,15 @@ body {
 
 .create-category input::placeholder {
     font-size: 14px;
+}
+
+.category-list {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin: 20px;
+}
+
+.category-list p {
+    width: 200px;
 }
