--- a/public/styles/pages/category/userCategoryList.css
+++ b/public/styles/pages/category/userCategoryList.css
@@ -47,7 +47,8 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: start;
-    padding-bottom: 15px;
+    padding-bottom: 10px;
+    position: relative;
 }
 
 .fa-user {
@@ -67,7 +68,6 @@ body {
     font-size: 12px;
     padding: 0 0 15px 0;
     font-weight: bold;
-    position: relative;
 }
 
 .category-id:after {
@@ -76,8 +76,16 @@ body {
     left: 0px;
     bottom: -2px;
     height: 1px;
-    width: 250px;
+    width: 100%;
     background: #a5a4a4;
+}
+
+.category-menu-bar-main {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding-top: 10px;
+    height: 80%;
 }
 
 .category-list {
@@ -87,12 +95,17 @@ body {
     flex: 1;
 }
 
-.category-bottom {
+.category-footer {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    align-items: center;
-    margin-top: 100px;
+    align-items: end;
+    padding-bottom: 5px;
+}
+
+.admin-setup i {
+    color: black;
+    font-size: 16px;
 }
 
 .logout {
@@ -106,11 +119,11 @@ body {
 .logout a {
     display: flex;
     align-items: center;
+    gap: 10px;
 }
 
 .fa-right-from-bracket {
     color: black;
-    padding-left: 10px;
 }
 
 /* 로그아웃 창 */
