--- a/src/views/admin/category/categoryList.ejs
+++ b/src/views/admin/category/categoryList.ejs
@@ -15,8 +15,8 @@
         <title>Document</title>
     </head>
     <body>
-        <div class="category-menu-bar">
-            <section>
+        <section class="category-menu-bar">
+            <div class="category-menu-bar-header">
                 <a href=""><i class="fa-solid fa-x"></i></a>
                 <a href="">
                     <i class="fa-solid fa-gear"></i>
@@ -26,28 +26,32 @@
                     <p class="category-nickName">닉네임</p>
                     <p class="category-id">@ggaong</p>
                 </div>
-            </section>
-            <section>
-                <% category.forEach(function(category) { %>
-                <div class="category-list">
-                    <a href="/admin/category/<%= category.categoryId %>/posts">
-                        <p><%= category.title %></p>
-                    </a>
+            </div>
+            <div class="category-menu-bar-main">
+                <div>
+                    <% category.forEach(function(category) { %>
+                    <div class="category-list">
+                        <a
+                            href="/admin/category/<%= category.categoryId %>/posts"
+                        >
+                            <p><%= category.title %></p>
+                        </a>
+                    </div>
+                    <% }) %>
                 </div>
-                <% }) %>
-            </section>
-            <section class="category-bottom">
-                <a href="/admin/category/write" class="admin-setup">
-                    <i class="fa-solid fa-pen"></i>
-                </a>
-                <div class="logout">
-                    <a href="">
-                        <p>로그아웃</p>
-                        <i class="fa-solid fa-right-from-bracket"></i>
+                <div class="category-footer">
+                    <a href="/admin/category/write" class="admin-setup">
+                        <i class="fa-solid fa-pen"></i>
                     </a>
+                    <div class="logout">
+                        <a href="">
+                            <p>로그아웃</p>
+                            <i class="fa-solid fa-right-from-bracket"></i>
+                        </a>
+                    </div>
                 </div>
-            </section>
-        </div>
+            </div>
+        </section>
 
         <!-- 로그아웃 창 -->
         <div id="logout-popup" class="logout-popup hidden">
