--- a/src/views/client/category/userCategoryList.ejs
+++ b/src/views/client/category/userCategoryList.ejs
@@ -9,14 +9,14 @@
         />
         <link
             rel="stylesheet"
-            href="/static/styles/pages/category/userCategoryList.css"
+            href="/static/styles/pages/category/categoryList.css"
         />
         <link rel="stylesheet" href="/static/styles/reset.css" />
         <title>Document</title>
     </head>
     <body>
-        <div class="category-menu-bar">
-            <section>
+        <section class="category-menu-bar">
+            <div class="category-menu-bar-header">
                 <a href=""><i class="fa-solid fa-x"></i></a>
                 <a href="">
                     <i class="fa-solid fa-gear"></i>
@@ -26,25 +26,29 @@
                     <p class="category-nickName">닉네임</p>
                     <p class="category-id">@ggaong</p>
                 </div>
-            </section>
-            <section>
-                <% category.forEach(function(category) { %>
-                <div class="category-list">
-                    <a
-                        href="/client/category/<%= category.categoryId %>/posts>"
-                    >
-                        <p><%= category.title %></p>
-                    </a>
-                </div>
-                <% }) %>
-            </section>
-            <div class="logout">
-                <a href="">
-                    <p>로그아웃</p>
-                    <i class="fa-solid fa-right-from-bracket"></i>
-                </a>
             </div>
-        </div>
+            <div class="category-menu-bar-main">
+                <div>
+                    <% category.forEach(function(category) { %>
+                    <div class="category-list">
+                        <a
+                            href="/admin/category/<%= category.categoryId %>/posts"
+                        >
+                            <p><%= category.title %></p>
+                        </a>
+                    </div>
+                    <% }) %>
+                </div>
+                <div class="category-footer">
+                    <div class="logout">
+                        <a href="">
+                            <p>로그아웃</p>
+                            <i class="fa-solid fa-right-from-bracket"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </section>
 
         <!-- 로그아웃 창 -->
         <div id="logout-popup" class="logout-popup hidden">
