--- a/public/styles/pages/category/userCategoryList.css
+++ b/public/styles/pages/category/userCategoryList.css
@@ -19,12 +19,12 @@ body {
 }
 
 .category-menu-bar::-webkit-scrollbar-thumb {
-    background: rgba(255, 255, 255, 0.3);
+    background: rgba(110, 229, 163, 0.5);
     border-radius: 10px;
 }
 
 .category-menu-bar::-webkit-scrollbar-thumb:hover {
-    background: rgba(255, 255, 255, 0.6);
+    background: rgba(110, 229, 163, 0.7);
 }
 
 .fa-x {
@@ -85,7 +85,7 @@ body {
     flex-direction: column;
     justify-content: space-between;
     padding-top: 10px;
-    height: 80%;
+    height: 100%;
 }
 
 .category-list {
@@ -93,14 +93,6 @@ body {
     margin: 10px 0;
     color: black;
     flex: 1;
-}
-
-.category-footer {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: end;
-    padding-bottom: 5px;
 }
 
 .admin-setup i {
@@ -139,10 +131,16 @@ body {
     width: 250px;
     height: 100px;
     border-radius: 10px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
+}
+
+.logout-popup.hidden {
+    display: none;
 }
 
 .popup-content p {
     padding-bottom: 15px;
+    font-weight: 700;
 }
 
 .logout-btn {
@@ -158,6 +156,7 @@ body {
     padding: 5px 10px;
     border-radius: 10px;
     cursor: pointer;
+    font-weight: bold;
 }
 
 .btn-confirm {
@@ -166,4 +165,5 @@ body {
     border-radius: 10px;
     padding: 5px 10px;
     cursor: pointer;
+    font-weight: bold;
 }
