--- a/src/views/admin/login.ejs
+++ b/src/views/admin/login.ejs
@@ -13,7 +13,7 @@
       <form action="/login" method="POST">
         <div>
           <label for="username">아이디</label>
-          <input type="text" id="username" name="username" required />
+          <input type="text" id="userid" name="userid" required />
         </div>
         <div>
           <label for="password">비밀번호</label>
