--- a/public/styles/pages/posts/postWrite.css
+++ b/public/styles/pages/posts/postWrite.css
@@ -2,3 +2,50 @@
 @import "../../common.css";
 
 
+
+#wrap {
+  overflow-x: hidden;
+}
+
+
+
+#wrap > .inner {
+  padding: 20% 15px;
+  /* max-width: 100%; */
+}
+
+
+/* 폼 영역*/
+#postWriteForm {
+  align-items: flex-start;
+  flex-wrap: wrap;
+  /* width: 100%; */
+}
+
+/* 카테고리 선택 */
+.category, #category {
+  width: 60%;
+  height: 40px;
+
+}
+
+/* 제목 */
+.title, #title {
+  width: 100%;
+  height: 40px;
+}
+
+/* 내용 */
+#content {
+  max-width: 100%;
+  max-height: 100%;
+  border-radius: 10px;
+  padding: 10px;
+  border: none;
+  outline: none;
+  font-family: "noto Sans KR";
+  font-size: 15px;
+  color: var(--mono-400);
+  resize: none;
+}
+
