--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -5,6 +5,55 @@
     <link rel="stylesheet" href="/static/styles/style.scss" />
   </head>
   <body>
-    유저 화면 로그인 페이지
+    <div>
+      <%-include('./_layouts/header.ejs') %>
+      <div class="container">
+        <form method="post">
+          <div class="form-group">
+            <label for="id">아이디</label>
+            <input
+              type="text"
+              class="form-control"
+              id="id"
+              name="id"
+              placeholder="아이디를 입력하세요"
+            />
+          </div>
+          <div class="form-group">
+            <label for="password">패스워드</label>
+            <input
+              type="password"
+              class="form-control"
+              id="password"
+              name="password"
+              placeholder="패스워드를 입력하세요"
+            />
+          </div>
+          <button type="submit" class="btn btn-primary">로그인</button>
+        </form>
+      </div>
+    </div>
+    <script>
+      const form = document.querySelector("form");
+      form.addEventListener("submit", async (e) => {
+        e.preventDefault();
+        const id = document.querySelector("#id").value;
+        const password = document.querySelector("#password").value;
+        const data = { id, password };
+        const response = await fetch("/api/auth/login", {
+          method: "POST",
+          headers: {
+            "Content-Type": "application/json",
+          },
+          body: JSON.stringify(data),
+        });
+        if (response.ok) {
+          alert("로그인 성공");
+          location.href = "/";
+        } else {
+          alert("로그인 실패");
+        }
+      });
+    </script>
   </body>
 </html>
