--- a/src/views/client/posts/postWrite.ejs
+++ b/src/views/client/posts/postWrite.ejs
@@ -12,7 +12,7 @@
 </head>
 <body>
   <div class="inner">
-    <%- include('../../_layouts/header') %>
+    <%- include('../../_layouts/header-w') %>
   </div>
   
     <div id="wrap">
@@ -22,14 +22,14 @@
           <!-- 카테고리 선택 시작 -->
           <label for="category" class="category">
             <!-- <span>카테고리 선택</span> -->
-            <select name="category" id="category" required>
+            <select name="category" id="category" class="category" required>
               <option disabled selected>카테고리 선택</option>
-              <option value="movie">영화 나눔숲</option>
-              <option value="exercise">운동 나눔숲</option>
-              <option value="develop">개발 나눔숲</option>
-              <option value="food">맛집 나눔숲</option>
-              <option value="food"> 나눔숲</option>
-              <option value="food"> 나눔숲</option>
+              <option value="movie">&#127916; 영화 나눔숲</option>
+              <option value="exercise">&#128170; 운동 나눔숲</option>
+              <option value="develop">&#128187; 개발 나눔숲</option>
+              <option value="food">&#127836; 맛집 나눔숲</option>
+              <!-- <option value="food"> 나눔숲</option>
+              <option value="food"> 나눔숲</option> -->
             </select>
           </label>
         <!-- 카테고리 선택 끝 -->
