[최병호] css 적용

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -3,6 +3,7 @@
   <head>
     <%-include('./_layouts/meta.ejs') %>
     <link rel="stylesheet" href="/static/styles/style.scss" />
+    <link rel="stylesheet" href="/static/styles/init.css" />
   </head>
   <body></body>
 </html>
