--- a/src/views/signUp.ejs
+++ b/src/views/signUp.ejs
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>회원가입</title>
     <link rel="stylesheet" href="/styles.css" />
+    <link rel="stylesheet" href="/static/styles/init.css" />
   </head>
   <body>
     <div class="container">
