[황다영] header 메뉴바 버튼 추가

--- a/public/styles/init.css
+++ b/public/styles/init.css
@@ -60,6 +60,15 @@ body {
   background-image: url("/static/images/arrow-left-w.svg");
 }
 
+/* 메뉴 버튼 검 */
+#header .menuButton {
+  background-image: url("/static/images/menu-btn.svg");
+}
+/* 메뉴 버튼 흰 */
+#header .menuButton {
+  background-image: url("/static/images/menu-btn-w.svg");
+}
+
 /* 찾기 버튼 검정 */
 #header .searchButton {
   background-image: url("/static/images/search-btn.svg");
