--- a/src/views/client/posts/postWrite.ejs
+++ b/src/views/client/posts/postWrite.ejs
@@ -12,7 +12,7 @@
 </head>
 <body>
   <div class="inner">
-    <%- include('../../_layouts/header-w') %>
+    <%- include('../../_layouts/header-menu-w') %>
   </div>
   
     <div id="wrap">
