[황다영] postman테스트

--- a/public/styles/pages/posts/postWrite.css
+++ b/public/styles/pages/posts/postWrite.css
@@ -8,13 +8,16 @@ body {
 
 
 #wrap {
-  overflow-x: hidden;
+  /* overflow-x: hidden; */
+
 }
 
 
 #wrap > .inner {
-  padding: 20% 15px;
-  /* max-width: 100%; */
+  padding: 0;
+  padding-right: 15px;
+  padding-top: 5%;
+  
 }
 
 
@@ -24,7 +27,7 @@ body {
   flex-wrap: wrap;
   border-radius: 10px;
   gap: 10px;
-  /* width: 100%; */
+  width: 100%;
 }
 
 /* 카테고리 선택 */
@@ -33,13 +36,14 @@ body {
   height: 40px;
   border-radius: 10px;
   color: var(--mono-500);
+  /* padding: 0 10px; */
 }
 
 /* 카테고리 select 박스 */
-select.category::-ms-expand {
+select::-ms-expand {
   display: none;
 }
-select.category {
+select {
   background-image: url('/static/images/arrow-down.svg'); 
   background-repeat: no-repeat;
   background-position: right 10px top 30%;
@@ -55,7 +59,7 @@ select.category {
 select.category option {
   cursor: pointer;
   font-weight: 500;
-  width: 100%;
+  /* width: 100%; */
 }
 
 
@@ -67,9 +71,14 @@ select.category option {
   border-radius: 10px;
 }
 
+/* 제목, 카테고리선택 부분 왼쪽 여백주기 */
+#title, #category {
+  padding-left: 10px;
+}
+
 /* 내용 */
 #content {
-  max-width: 100%;
+  width: 100%;
   max-height: 100%;
   border-radius: 10px;
   padding: 10px;
@@ -81,4 +90,3 @@ select.category option {
   resize: none;
 
 }
-
