[카테고리] rest api 연결중

--- a/src/views/admin/category/categoryEdit.ejs
+++ b/src/views/admin/category/categoryEdit.ejs
@@ -12,6 +12,7 @@
             href="/static/styles/pages/category/categoryEdit.css"
         />
         <link rel="stylesheet" href="/static/styles/reset.css" />
+        <link rel="stylesheet" href="/static/styles/init.css">
         <title>카테고리 수정 및 삭제</title>
     </head>
     <body>
