--- a/public/styles/pages/category/categoryList.css
+++ b/public/styles/pages/category/categoryList.css
@@ -1,9 +1,3 @@
-body {
-    background-color: #6ee5a3;
-    /* width: 100%;
-    height: 100%; */
-}
-
 /* 메뉴 팝업 */
 .category-menu-bar {
     background-color: rgba(255, 255, 255, 0.8);
@@ -18,12 +12,12 @@ body {
     width: 10px;
 }
 
-.category-menu-bar::-webkit-scrollbar-thumb {
+.category-setup-menu-bar::-webkit-scrollbar-thumb {
     background: rgba(255, 255, 255, 0.3);
     border-radius: 10px;
 }
 
-.category-menu-bar::-webkit-scrollbar-thumb:hover {
+.category-setup-menu-bar::-webkit-scrollbar-thumb:hover {
     background: rgba(255, 255, 255, 0.6);
 }
 
