--- a/public/styles/pages/category/categoryWrite.css
+++ b/public/styles/pages/category/categoryWrite.css
@@ -1,7 +1,3 @@
-body {
-    background-color: #6ee5a3;
-}
-
 .category-write-edit-wrapper {
     display: flex;
     gap: 100px;
@@ -29,6 +25,15 @@ body {
     background: rgba(255, 255, 255, 0.6);
 }
 
+.category-profile {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: start;
+    padding-bottom: 15px;
+    position: relative;
+}
+
 .fa-gear {
     position: absolute;
     right: 0px;
@@ -37,15 +42,7 @@ body {
     font-size: 16px;
     padding: 15px;
     border-radius: 50%;
-}
-
-.category-profile {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: start;
-    padding-bottom: 15px;
-    position: relative;
+    z-index: 10;
 }
 
 .fa-user {
@@ -93,25 +90,29 @@ body {
 .logout {
     display: flex;
     justify-content: end;
-    align-items: end;
+    align-items: center;
     font-size: 18px;
     font-weight: 700;
+    gap: 10px;
 }
 
 .logout a {
     display: flex;
     align-items: center;
-    gap: 10px;
+}
+
+.logout p {
+    padding-right: 5px;
 }
 
 .category-write-edit-main {
     background-color: rgba(255, 255, 255, 0.8);
+    display: flex;
+    flex-direction: column;
 }
 
 .create-category {
     display: flex;
-    justify-content: center;
-    align-items: center;
     margin: 30px;
     gap: 15px;
 }
@@ -119,6 +120,7 @@ body {
 .create-category p {
     font-size: 16px;
     font-weight: bold;
+    padding-bottom: 40px;
 }
 
 .create-category input::placeholder {
@@ -128,24 +130,34 @@ body {
 .category-list-wrapper {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    align-items: center;
 }
 
 .category-list {
     display: flex;
     justify-content: space-between;
-    align-items: center; /* 수직 중앙 정렬 */
-    margin: 15px;
+    align-items: center;
+    margin: 10px 0;
+    gap: 20px;
+}
+
+.category-list input {
+    width: 150px; /* 원하는 너비 */
+    height: 30px; /* 원하는 높이 */
+    padding: 5px; /* 여백 */
+    font-size: 14px; /* 폰트 크기 */
+    border: 1px solid #ccc; /* 테두리 스타일 */
+    border-radius: 4px; /* 테두리 둥글기 */
 }
 
 .category-list p {
-    width: 200px;
-    margin: 0;
+    display: flex;
+    align-items: center;
 }
 
 .category-edit-icons {
     display: flex;
-    gap: 10px; /* 아이콘들 간의 간격 조정 */
+    gap: 10px;
 }
 /* 로그아웃 창 */
 .logout-popup {
@@ -196,3 +208,7 @@ body {
     cursor: pointer;
     font-weight: bold;
 }
+
+/* .hidden {
+    display: none;
+} */
