--- a/public/styles/pages/category/userCategoryList.css
+++ b/public/styles/pages/category/userCategoryList.css
@@ -1,9 +1,3 @@
-body {
-    background-color: #6ee5a3;
-    /* width: 100%;
-    height: 100%; */
-}
-
 /* 메뉴 팝업 */
 .category-menu-bar {
     background-color: rgba(255, 255, 255, 0.8);
@@ -18,13 +12,13 @@ body {
     width: 10px;
 }
 
-.category-menu-bar::-webkit-scrollbar-thumb {
-    background: rgba(110, 229, 163, 0.5);
+.category-setup-menu-bar::-webkit-scrollbar-thumb {
+    background: rgba(255, 255, 255, 0.3);
     border-radius: 10px;
 }
 
-.category-menu-bar::-webkit-scrollbar-thumb:hover {
-    background: rgba(110, 229, 163, 0.7);
+.category-setup-menu-bar::-webkit-scrollbar-thumb:hover {
+    background: rgba(255, 255, 255, 0.6);
 }
 
 .fa-x {
