--- a/src/views/admin/category/categoryList.ejs
+++ b/src/views/admin/category/categoryList.ejs
@@ -12,6 +12,7 @@
             href="/static/styles/pages/category/categoryList.css"
         />
         <link rel="stylesheet" href="/static/styles/reset.css" />
+        <link rel="stylesheet" href="/static/styles/init.css" />
         <title>Document</title>
     </head>
     <body>
